2009-03-27 Holger Vogt
  * inpcom.c, variable.c, cpitf.c: memory leaks removed, which were detected by
    valgrind-3.4.1 under SUSE 11.1

2009-03-22 Holger Vogt
  * inpcom.c: readline() now returns /n for an empty line, dynLlen consists of
    maximum line length plus some space for parameter substitution and has a
    minimum size of 512.
  * spicenum.c, xpressn.c, general.h, numparam.h: dynamic memory allocation 
    also for all string manipultions, Strbig now is a macro using tmalloc, 
    the macro Strrem deallocates the memory, the size of the arrays is dynLlen.
      
2009-03-21 Holger Vogt
  * inpcom.c, fteinp.h, inpdefs.h: line renumbering of input deck added
    to the end of fcn inp_readall(). cc->li_line_original now contains
    the line numbering of the input file

2009-03-15 Holger Vogt
  * cktfinddev.c: some (optical) cleanup
  * numparam.h, xpressn.c, spicenum.c, inpcom.c: dynamic memory
    allocation for numparam (the easier part) 

2009-03-08 Holger Vogt
  * dctran.c no printout of 'Initial transient solution' if 
    .options noacct is set

2009-03-08 Holger Vogt
  * plotit.c fcn plotit(): add quotes again for xlabel, ylabel, title
   in cline

2009-03-07 Holger Vogt
  * inpcom.c fcn inp_fix_for_numparam(): no quotes changed for plot lines within
    control section, e.g. plot v(2) xlabel 'my input' ylabel 'output'

2009-03-07 Dietmar Warning
 * tests/bsim4/*.out: same as below for bsim3

2009-03-07 Holger Vogt
  * spicenum.c inpcom.c subckt.c xpressn.c numpaif.h numparam.h general.h
    Collect information to allow dynamic memory allocation for numparam
    ( Still to be implemented ! )
    Defined in inpcom.c: dynmaxline dynnLen dynMaxckt dynsubst

2009-03-03 Dietmar Warning
 * tests/bsim3/*_sim/*.out: adapt output format to spice3 numdgt convention, most 
   tests are running except tran tests and op-amp ac test.
 * test/bin/check.sh: extend the filter rules by two keywords, not nice but works

2009-03-01 Dietmar Warning